appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: 'MicroScan AI Starter'
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: 'Sign In'
